[package]
name = "debag_utilities"
version = "0.1.0"
edition = "2024"
description = "debag_utilities provides procedural macros to simplify code debugging"
license = "MIT"
repository = "https://github.com/bjfssd757/debag-utilities"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true